<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<artifactId>codemonkey-desktop</artifactId>
	
	<packaging>war</packaging>
	<name>codemonkey-desktop</name>
	<url>http://maven.apache.org</url>
	
	<parent>
		<groupId>com.codemonkey</groupId>
		<artifactId>codemonkey</artifactId>
		<version>1.0.0</version>
	</parent>
	
	<dependencies>
		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
        <!--					  COMPILE							 -->
        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
		
		<dependency>
			<groupId>com.codemonkey</groupId>
			<artifactId>codemonkey-core</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.codemonkey</groupId>
			<artifactId>codemonkey-ibatis</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.codemonkey</groupId>
			<artifactId>codemonkey-erp</artifactId>
			<version>1.0.0</version>
		</dependency>
	
		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
        <!--				  WEB									 -->
        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       
       <dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
       <dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-spring</artifactId>
			<version>${shiro.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-core</artifactId>
			<version>${shiro.version}</version>
		</dependency>
		
       <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${servlet-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>${jsp-api.version}</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>${jstl.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>opensymphony</groupId>
            <artifactId>sitemesh</artifactId>
            <version>${sitemesh.version}</version>
        </dependency>
		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
        <!--					  RUNTIME							 -->
        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
        <dependency>
		    <groupId>commons-fileupload</groupId>
		    <artifactId>commons-fileupload</artifactId>
		    <version>${commons-fileupload.version}</version>
		    <scope>runtime</scope>
		</dependency>
		
	</dependencies>
	
	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    <!--					  BUILD								 -->
    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
	<build>
		<finalName>${artifactId}</finalName>
		
		<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    	<!--					  PLUGINS							 -->
    	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
		<plugins>
		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			
			<plugin>
		        <groupId>org.codehaus.mojo</groupId>
		        <artifactId>tomcat-maven-plugin</artifactId>
		        <version>1.1</version>
		        <configuration>
						<path>/</path>
						<port>9090</port>
						<systemProperties>
							<JAVA_OPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>
						</systemProperties>
		        </configuration>
			</plugin>
		</plugins>
		
	</build>
	
	<profiles>
		<profile>
			<id>deployToTomcat</id>
			<build>
				<plugins>
					<plugin>
		                <groupId>org.codehaus.mojo</groupId>
		                <artifactId>tomcat-maven-plugin</artifactId>
		                <configuration>
		                    <url>${tomcat.manageUrl}</url>
		                    <path>${tomcat.publishPath}</path>
		                    <username>${tomcat.username}</username>
		                    <password>${tomcat.passsword}</password>
		                </configuration>
		                <executions>
		                	 <execution>
		                        <id>install</id>
		                        <phase>install</phase>
		                        <goals>
		                            <goal>redeploy</goal>
		                        </goals>
		                    </execution>
		                </executions>
		            </plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<properties>
		<tomcat.username>tomcat</tomcat.username>
		<tomcat.passsword>tomcat</tomcat.passsword>
		<tomcat.manageUrl>http://localhost:9090/manager/html</tomcat.manageUrl>
		<tomcat.publishPath>/</tomcat.publishPath>
	</properties>
</project>
